<resources>
    <string name="app_name">Eyemax</string>
    <string name="welcome_to_eyemax">Welcome to Eyemax</string>
    <string name="please_upload_an_image_of_actors_from_any_tv_show_or_movie">Please upload an image
        of actors from any TV show or movie</string>
    <string name="action_settings">Settings</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>

    <string name="display_text">Display Text</string>
    <string name="change_text_color">Text Color</string>
    <string name="text_size">Text Size</string>
    <string name="match_sensitivity">Match Sensitivity</string>
    <string name="match_summary">Choose level of match accuracy</string>
    <string name="add">Add</string>
    <string name="preferences">Preferences</string>
    <string name="upload">Upload</string>
    <string name="identify">Identify</string>
    <string name="enter_an_actor">Enter an actor</string>
    <string name="search">Search</string>
    <string name="loading_title">Loading Title</string>
    <string name="released">Released:</string>
    <string name="genre">Genre:</string>
    <string name="cast">Cast</string>
    <string name="loading_name">Loading name...</string>
    <string name="loading_character">Loading Character...</string>
    <string name="textview">TextView</string>
    <string name="delete">Delete</string>
    <string name="or_search_using_actor_names_below">Or search using actor names below</string>
    <string name="enter_name_of_actor_to_add">Enter name of actor to add</string>
    <string name="next">Next</string>
    <string name="add_photo">Add Photo!</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="cache_warning_message">WARNING: This will remove all cached data. New data will
        need to be fetched resulting in additional API requests and slower page loading. Are you
        sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="defaults_warning_message">This will reset all preferences to their default values.
        Are you sure?</string>
    <string name="removes_cached_local_data">Removes cached local data</string>
    <string name="restores_all_preferences_to_their_default_values">Restores all preferences to
        their default values</string>
    <string name="match_accuracy">Match Accuracy</string>
    <string name="clear_cache">Clear cache</string>
    <string name="reset_defaults">Reset defaults</string>
</resources>