<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/released"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/genre" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="148dp"
                android:layout_height="192dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/departed" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/cast" />

        <HorizontalScrollView
            android:id="@+id/hsvCastList"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCast1"
                        android:layout_width="100dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bpitt1" />

                    <TextView
                        android:id="@+id/tvName1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:id="@+id/tvChar1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_character"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCast2"
                        android:layout_width="100dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bpitt1" />

                    <TextView
                        android:id="@+id/tvName2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:id="@+id/tvChar2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_character"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCast3"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bpitt1" />

                    <TextView
                        android:id="@+id/tvName3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading name..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:id="@+id/tvChar3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Loading Character..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCast4"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bpitt1" />

                    <TextView
                        android:id="@+id/tvName4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading name..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:id="@+id/tvChar4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Loading Character..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCast5"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bpitt1" />

                    <TextView
                        android:id="@+id/tvName5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading name..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:id="@+id/tvChar5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Loading Character..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCast6"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bpitt1" />

                    <TextView
                        android:id="@+id/tvName6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading name..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:id="@+id/tvChar6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Loading Character..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCast7"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bpitt1" />
                    <TextView
                        android:id="@+id/tvName7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading name..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:id="@+id/tvChar7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Loading Character..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCast8"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bpitt1" />
                    <TextView
                        android:id="@+id/tvName8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading name..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:id="@+id/tvChar8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Loading Character..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCast9"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bpitt1" />

                    <TextView
                        android:id="@+id/tvName9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading name..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:id="@+id/tvChar9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Loading Character..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivCast10"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bpitt1" />

                    <TextView
                        android:id="@+id/tvName10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading name..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:id="@+id/tvChar10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Loading Character..."
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/tvReviewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="Plot" />

        <TextView
            android:id="@+id/tvPlot"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:scrollbars="vertical"
            android:text="Loading..." />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>